Tiny: shear visc definition

--- a/Thesis/Dynamical_Model/Dynamical_Model.tex
+++ b/Thesis/Dynamical_Model/Dynamical_Model.tex
@@ -77,7 +77,11 @@ This is larger than the classical polarization by a factor of $B^2 / B_\theta^2$
 \subsection{Shear Viscosity}\label{ssec:shear_viscosity}
 The ion shear (perpendicular) viscosity is the perpendicular component of the viscous stress tensor.
 In the L--H transition, it can be viewed as coupling the L-- and H--mode solutions spatially.
-It can be expressed as 
+It is expressed by Itoh \emph{et al.} \cite{itoh_elmy_1993} as
+\begin{align} % Shear Viscosity Current
+	J^{\pi\perp} \,=\, \nabla \left(\frac{e \, \rho_\theta \, n_i \, \mu_i}
+		{v_{T_i}} \, \nabla\left(\frac{E_r}{B_\theta}\right)\right)
+\end{align}
 
 \subsection{Bulk Viscosity}\label{ssec:bulk_viscosity}
 Two mathematical forms of the parallel ion (bulk) viscosity have been developed in the literature.
