More done; normalization appendix init

--- a/Thesis/Appendices/Code.tex
+++ b/Thesis/Appendices/Code.tex
@@ -1,3 +1,4 @@
+\chapter{Code}\label{chapter:Code}
 
 \inputminted[tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
 
