--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -53,14 +53,14 @@ There is substantial evidence, both theoretically and experimentally, that a rad
 Many of the effects in generating and suppressing the field show up as additive terms in an equation for a radial displacement current.
 Because many of these fluxes scale differently, simple scaling laws for H--mode could contrast for regimes where different effects dominate.
 It is therefore important to evaluate which terms dominate in their respective regimes before inquiring about global scalings.
-The overall problem is thus stated simply: \textbf{Which electric field-generating terms are dominant in concrete experimental tokamak conditions?}
+The overall problem is thus stated simply: \textbf{Which electric field-generating mechanisms are dominant in concrete experimental tokamak conditions?}
 This is in an effort to determine which measurable and controllable values can predict H--mode.
 
-The first consideration is to decide \textbf{which terms should be considered for investigation}, as not all nonambipolar fluxes will significantly contribute to the transition.
-For example, the nonambipolar flux due to magnetic ripple loss highly depends on collisionality, in which lower collisionality results in a low flux \cite{stringer_effect_1972}.
+The first consideration is to decide \textbf{which mechanisms, and therefore relevant parameters, should be investigated}, as not all nonambipolar fluxes will significantly contribute to the transition.
+For example, the nonambipolar flux due to magnetic ripple loss is highly dependent on collisionality, in which lower collisionality results in a low flux \cite{stringer_effect_1972}.
 Since a relatively ideal operation (temperature on the order of 100 eV at the edge) will be investigated, this flux can be neglected.
 
-\textbf{Identifying what optimal form and relative strengths of each flux and subsequently implementing them} appropriately is the crucial next step.
+\textbf{Identifying what optimal form of each flux and subsequently implementing them} appropriately is the crucial next step.
 Because the model is highly nonlinear, it is sensitive to the forms and relative strengths.
 The calculation is done with a finite volume method solver, in which the results requires verification with the literature.
 
@@ -69,5 +69,18 @@ Performing a scan of input heating power significantly above the lower threshold
 Therefore, \textbf{what is the variation in dominance of each field-generating term across increasing input power}, including those inside and outside the regime with non-unique operational modes?
 
 \section{Outline}\label{sec:outline}
+The layout of this report is as follows.
+The mathematical and physical phenomena relating to H--mode and the L--H transition are described in Chapter~\ref{chapter:physics_bifurcation}
+This includes the forms of the bifurcations present tokamaks, a qualitative view of turbulent transport and its suppression, and the basis of the radial electric field at the edge.
+
+Chapter~\ref{chapter:dynamical_model} completes the physics that is dealt with in this investigate.
+However, it primarily sets the stage for the model, including a description of the equations, their boundary conditions, and how they were derived.
+It also includes descriptions of each nonambipolar particle flux and any nuance that was included.
+
+The details of the numerical method used is described in Chapter~\ref{chapter:numerical_method}.
+
+The results of the investigation are presented in Chapter~\ref{chapter:results}.
+
+Finally, the answers to the research questions and summary of the investigate is in Chapter~\ref{chapter:conclusion}.
 \todo{\color{red}OUTLINE of thesis}
 
