--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -148,8 +148,8 @@
 % ---------------------------------------------------------
 
 \begin{appendices}
-\chapter{Code}
 \input{Appendices/Code.tex}
+\input{Appendices/Normalization.tex}
 \end{appendices}
 
 \printbibliography
