Added JET evidence of OL

--- a/References/References.bib
+++ b/References/References.bib
@@ -992,6 +992,22 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	pages = {1453--1456}
 }
 
+@article{weisen_boundary_1991,
+	title = {Boundary ion temperatures and ion orbit losses in {JET}},
+	volume = {31},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/31/i=12/a=002},
+	doi = {10.1088/0029-5515/31/12/002},
+	abstract = {Ion and electron temperatures of up to 5 keV have been obtained within 10 cm of the last closed flux surface (LCFS) in hot ion H-modes with 18 MW of neutral beam heating. The ion temperature profiles appear to have 'pedestals' which scale with power per particle, T i (a) \#\#IMG\#\# [http://ej.iop.org/icons/Entities/lap.gif] lap P(a)/n e (0.9a) [keV, MW/10 19 m −3 ], in H-modes. In L-modes the pedestal temperatures are an order of magnitude lower. This difference can be explained by the one order of magnitude difference in particle residence time in the two confinement modes. In H-modes, the resulting pressure 'pedestals' contribute typically 40\% (up to 5 MJ) to the plasma stored energy, accounting for about half of the confinement improvement compared with the L-mode. The remaining improvement occurs across the entire plasma, but most notably in the periphery. There is ample evidence that ions with energies in the keV range escape to and beyond the LCFS and account for most of the loss power in the ion channel. This evidence includes results from energy discriminating probes in the scrape-off layer and the analysis of the characteristics of the heat strike zones in the X-point configuration. The observed boundary ion temperatures have far reaching implications for fusion reactivity, power handling, wall erosion and impurity production in reactor conditions. They suggest that it is possible to bring the entire volume of a reactor plasma to thermonuclear temperatures, with a considerable boost to the overall thermonuclear reactivity.},
+	language = {en},
+	number = {12},
+	urldate = {2018-04-15},
+	journal = {Nuclear Fusion},
+	author = {Weisen, H. and Bergsåker, H. and Campbell, D. J. and Erents, S. K. and Kock, L. C. J. M. de and McCracken, G. M. and Stamp, M. F. and {D.D.R. Summers} and Thomas, P. R. and Hellermann, M. von and Zhu, J.},
+	year = {1991},
+	pages = {2247}
+}
+
 @mastersthesis{weymiens_bifurcation_2014,
 	address = {Eindhoven},
 	title = {Bifurcation {Theory} of the {L}-{H} {Transition} in {Fusion} {Plasmas}},
