Added ind weymiens; cx; etc

--- a/References/References.bib
+++ b/References/References.bib
@@ -195,6 +195,21 @@
 	pages = {R1}
 }
 
+@article{dippolito_effect_2002,
+	title = {Effect of ion-neutral charge exchange on radial electric fields in the edge plasma},
+	volume = {9},
+	issn = {1070-664X},
+	url = {https://aip.scitation.org/doi/abs/10.1063/1.1447919},
+	doi = {10.1063/1.1447919},
+	number = {3},
+	urldate = {2018-04-17},
+	journal = {Physics of Plasmas},
+	author = {D’Ippolito, D. A. and Myra, J. R.},
+	month = feb,
+	year = {2002},
+	pages = {853--860}
+}
+
 @article{diamond_theory_1991,
 	title = {Theory of mean poloidal flow generation by turbulence},
 	volume = {3},
@@ -365,7 +380,6 @@
 	pages = {3082--3098}
 }
 
-
 @article{ida_experimental_1998,
 	title = {Experimental studies of the physical mechanism determining the radial electric field and its radial structure in a toroidal plasma},
 	volume = {40},
@@ -429,6 +443,22 @@
 	month = may,
 	year = {1988},
 	pages = {2276--2279}
+}
+
+@article{itoh_model_1989,
+	title = {Model of the {H}-mode in tokamaks},
+	volume = {29},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/29/i=6/a=013},
+	doi = {10.1088/0029-5515/29/6/013},
+	abstract = {The paper presents a theoretical model of the H-mode in tokamaks which is based on the bifurcation of the radial electric field at the plasma edge. The electric field is determined by the balance of the non-ambipolar fluxes of ions and electrons at the edge. It is found that bifurcations of the radial electric field, the particle flux and the convective energy loss occur when the edge gradient reaches a critical value. This is attributed to L-H or H-L transition. The critical conditions are examined and the role of neutral particles as well as the effect of impurities are incorporated in the model. Combining the confinement scaling laws for both the core plasma and the scrape-off layer plasma, the threshold power for the transition is derived. The temporal evolution associated with the transition is studied.},
+	language = {en},
+	number = {6},
+	urldate = {2018-04-17},
+	journal = {Nuclear Fusion},
+	author = {Itoh, S.-I. and Itoh, K.},
+	year = {1989},
+	pages = {1031}
 }
 
 @article{itoh_solitary_1998,
@@ -744,7 +774,6 @@ Assuming that the anomalous transport is ambipolar, the radial electric field an
 	pages = {105009}
 }
 
-
 @article{scott_three-dimensional_1997,
 	title = {Three-dimensional computation of collisional drift wave turbulence and transport in tokamak geometry},
 	volume = {39},
@@ -806,6 +835,21 @@ Assuming that the anomalous transport is ambipolar, the radial electric field an
 	month = nov,
 	year = {1989},
 	pages = {2369--2372}
+}
+
+@article{shaing_critical_1995,
+	title = {Critical neutral density for high‐mode bifurcation in tokamaks},
+	volume = {2},
+	issn = {1070-664X},
+	url = {https://aip.scitation.org/doi/10.1063/1.871332},
+	doi = {10.1063/1.871332},
+	number = {6},
+	urldate = {2018-04-17},
+	journal = {Physics of Plasmas},
+	author = {Shaing, K. C. and Hsu, C. T.},
+	month = jun,
+	year = {1995},
+	pages = {1801--1803}
 }
 
 @article{shaing_bifurcation_1990,
@@ -1033,6 +1077,21 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	pages = {052302}
 }
 
+@article{weymiens_bifurcation_2012,
+	title = {Bifurcation theory for the {L}-{H} transition in magnetically confined fusion plasmas},
+	volume = {19},
+	issn = {1070-664X},
+	url = {https://aip.scitation.org/doi/abs/10.1063/1.4739227},
+	doi = {10.1063/1.4739227},
+	number = {7},
+	urldate = {2018-04-17},
+	journal = {Physics of Plasmas},
+	author = {Weymiens, W. and de Blank, H. J. and Hogeweij, G. M. D. and de Valença, J. C.},
+	month = jul,
+	year = {2012},
+	pages = {072309}
+}
+
 @article{wu_one-dimensional_2015,
 	title = {One-dimensional modelling of limit-cycle oscillation and {H}-mode power scaling},
 	volume = {55},
@@ -1063,6 +1122,7 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	year = {1992},
 	pages = {1385--1387}
 }
+
 
 @article{zohm_dynamic_1994,
 	title = {Dynamic behavior of the {L}--{H} transition},
