--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}\label{chapter:introduction}
 According to the Lawson criterion, for nuclear fusion to occur, the product of particle density $n$, temperature $T$, and confinement time $\tau$ must be above a critical value.
-\begin{align}
+\begin{align} % Lawson Criterion
 	n\,T\,\tau_E \geq 3\times 10^{21}~\frac{\text{keV}\cdot\text{s}}{\text{m}^3}
 \end{align}
 In this expression, the confinement time is generally regarded to be the term that limits progress in development of fusion, as it has been the most difficult to increase.
