Biased probe references added

--- a/References/References.bib
+++ b/References/References.bib
@@ -1092,6 +1092,38 @@ in simplified transport models of the fusion plasma in one spatial dimension. We
 	pages = {072309}
 }
 
+@article{weynants_confinement_1992,
+	title = {Confinement and profile changes induced by the presence of positive or negative radial electric fields in the edge of the {TEXTOR} tokamak},
+	volume = {32},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/32/i=5/a=I10},
+	doi = {10.1088/0029-5515/32/5/I10},
+	abstract = {Edge radial electric fields were induced in the edge of the TEXTOR tokamak by means of a polarization electrode in order to study their influence on the plasma edge profiles and its confinement. The studies include the generation of H-mode behaviour with either positive or negative polarity. Particle confinement (τ p ) of deuterium and of impurity ions as well as energy confinement (τ E ) are investigated. For positive fields which remain below the threshold for the L-H transition, an interesting regime of reduced particle confinement without noticeable energy confinement loss is found. A strong asymmetry in the edge density profiles with respect to the electric field sign is observed at these low polarization voltages. Above the threshold, H-mode behaviour with increased energy confinement and especially particle confinement can be produced with either polarity of the applied electric field. It is, however, found that, whereas the energy confinement in positive H-modes is at least as good as that in negative ones, the ratio τ p /τ E is about three times lower in the former case},
+	language = {en},
+	number = {5},
+	urldate = {2018-04-18},
+	journal = {Nuclear Fusion},
+	author = {Weynants, R. R. and Oost, G. van and Bertschinger, G. and Boedo, J. and Brys, P. and Delvigne, T. and Dippel, K. H. and Durodie, F. and {H. Euringer} and Finken, K. H. and Gray, D. S. and Hey, J. D. and Hillis, D. L. and Hogan, J. T. and Konen, L. and Leners, R. and Messiaen, A. M. and {A. Pospieszczyck} and Samm, U. and Schorn, R. P. and Schweer, B. and Telesca, G. and Nieuwenhove, R. van and Vandenplas, P. E.},
+	year = {1992},
+	pages = {837}
+}
+
+@article{weynants_dynamics_1990,
+	title = {Dynamics of {H}-mode-like edge transitions brought about by external polarization},
+	volume = {30},
+	issn = {0029-5515},
+	url = {http://stacks.iop.org/0029-5515/30/i=5/a=015},
+	doi = {10.1088/0029-5515/30/5/015},
+	abstract = {By setting up radial electric fields in the edge of a tokamak plasma by means of electrodes it is possible to trigger edge rearrangements which are similar to L-H transitions. The radial currents due to the finite orthogonal conductivity provide a poloidal torque which spins up the plasma against the viscous force opposing the poloidal rotation. It is found, in agreement with theoretical predictions, that this force first increases with the rotation speed and then, above a critical rotation speed, decreases. Under conditions in which the applied torque exceeds the maximum opposing force, a bifurcation from low field to high field is inevitable and results in many of the typical L-H transition signatures. The measured radial conductivity is compared with neoclassical estimates.},
+	language = {en},
+	number = {5},
+	urldate = {2018-04-18},
+	journal = {Nuclear Fusion},
+	author = {Weynants, R. R. and Taylor, R. J.},
+	year = {1990},
+	pages = {945}
+}
+
 @article{wu_one-dimensional_2015,
 	title = {One-dimensional modelling of limit-cycle oscillation and {H}-mode power scaling},
 	volume = {55},
