Working more.... not finished with intro

--- a/References/References.bib
+++ b/References/References.bib
@@ -430,6 +430,22 @@
 	pages = {1}
 }
 
+@article{itoh_structural_2016,
+	title = {A structural bifurcation of transport in toroidal plasmas},
+	volume = {58},
+	issn = {0741-3335},
+	url = {http://stacks.iop.org/0741-3335/58/i=4/a=045017},
+	doi = {10.1088/0741-3335/58/4/045017},
+	abstract = {The mechanism of structure formation in plasmas, which is caused by the nonlinear link between the radial electric field, pressure gradient and turbulent fluctuations, is investigated. The suppression of turbulence by the shear and curvature of an inhomogeneous radial electric field is taken into account. The case of L-mode plasmas, where zonal flows are not excited, is studied. The 1D structure is investigated, and the stationary state under a given heat flux (constant in space and time) is analysed. It is shown that the effect of electric field curvature causes structural bifurcation from a state of a constant gradient to a state with a spatially corrugated gradient. The relationship between the period and amplitude of the corrugation is obtained. The electric field shear alone does not lead to such a structural bifurcation.},
+	language = {en},
+	number = {4},
+	urldate = {2018-04-18},
+	journal = {Plasma Physics and Controlled Fusion},
+	author = {Itoh, K. and Itoh, S.-I.},
+	year = {2016},
+	pages = {045017}
+}
+
 @article{itoh_model_1988,
 	title = {Model of {L} to {H}-{Mode} {Transition} in {Tokamak}},
 	volume = {60},
