Some small progress

--- a/Thesis/Appendices/Code.tex
+++ b/Thesis/Appendices/Code.tex
@@ -1,4 +1,6 @@
 \chapter{Code}\label{chapter:Code}
 
-\inputminted[tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
+\inputminted[firstline=25, lastline=41, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
+
+\inputminted[firstline=119, lastline=133, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/solving_flux.py}
 
