--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -96,9 +96,11 @@ However, it primarily sets the stage for the model, including a description of t
 It also includes descriptions of each nonambipolar particle flux and any nuance that was included.
 
 The details of the numerical method used is described in Chapter~\ref{chapter:numerical_method}.
+The numerical parameters that are chosen are also discussed.
 
 The results of the investigation are presented in Chapter~\ref{chapter:results}.
 
 Finally, the answers to the research questions and summary of the investigation is in Chapter~\ref{chapter:conclusion}.
+In addition, possible ideas for future research on this topic is presented.
 \todo{\color{red}OUTLINE of thesis}
 
